[tool.poetry]
name = "strm_blog"
version = "2.0.0"
description = "STRM blog materials"
authors = ["OPSXCQ <opsxcq@strm.sh>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
